# chatbot-template

./: .env.example  .gitignore  Dockerfile  EVALUATION_WORKFLOW_GUIDE.md  LICENSE  Makefile  README.md  __init__.py  app.py  cli.py  config.py  create_dashboard.py  deepresearch_cli.py  dependency_injector.py  pyproject.toml  rag_cli.py  requirements.txt  review_dataset.py  run_evaluation.py  simple_test_runner.py
api/: __init__.py  app.py  models.py
api/middleware/: __init__.py  error_handler.py
api/v1/: __init__.py  chat.py  experts.py  health.py  models.py  rag.py  utils.py
chat/: __init__.py  manager.py
config/: dependencies.yaml
docs/: EXPERT_SWITCHING_README.md  api.md  architecture.md  deep-research-feature.md  extending.md  folder_structure.md  host-mogodb.md  vector_similarity_search.md
infrastructure/: base.py  config.py  constants.py  logging.py
infrastructure/db/: mongodb.py
infrastructure/di/: container.py
src/: bot.py  chat_engine.py  config_injector.py
src/base/: bot.py
src/bot/: __init__.py  bot.py
src/chains/: manager.py
src/common/: __init__.py  config.py  exceptions.py  logging.py  models.py  objects.py  schemas.py
src/components/: README.md
src/core/: bot.py
src/experts/: __init__.py  base.py  factory.py
src/llms/: base.py
src/memory/: __init__.py  base_memory.py  custom_memory.py  mongodb_memory.py
src/reasoning/: __init__.py  chain_manager.py  retrieval_chain.py
src/tools/: base.py  serp.py
tests/: README.md  conftest.py  test_cli.py  test_config.py
utils/: anonymizer.py  chain_cache.py
(+107 files in other folders)
