[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=1.0.9",
    "injector>=0.22.0",
    "langchain-chroma>=0.2.4",
    "langchain-experimental>=0.3.4",
    "langchain-google-vertexai>=2.0.23",
    "langgraph>=0.4.5",
    "langserve>=0.3.1",
    "pypdf>=5.5.0",
    "vertexai>=1.43.0",
    "sqlalchemy>=2.0.0",
    "alembic>=1.13.0",
    "psycopg2-binary>=2.9.0",
    "asyncpg>=0.29.0",
    "aiosqlite>=0.20.0",
    "bcrypt>=4.0.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "email-validator>=2.0.0",
    "greenlet>=3.2.2",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
markers = [
    "integration: marks tests as integration tests (may require external services)",
]
